--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: root_checker_plus
 description: Plugin used for detecting root device in android and  jailbreak detection ios.
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: https://github.com/PanneerDev/root_checker_plus.git
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
